--- a/package.json
+++ b/package.json
@@ -41,5 +41,7 @@
       "last 1 safari version"
     ]
   },
-  "dependencies": {}
+  "dependencies": {
+    "multiple-websockets": "^0.1.4"
+  }
 }
