--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "css-loader": "^6.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-easy-crop": "^4.1.3",
     "react-scripts": "5.0.0",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.8",
+    "tslint-loader": "^3.5.4",
     "typescript": "^4.6.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack-cli": "^4.9.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "tslint": "^6.1.3",
+    "tslint-config-airbnb-base": "^0.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "webpack serve --open --hot --mode development",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
