--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,10 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "noEmit": false,
     "jsx": "react-jsx"
   },
   "include": [
     "src"
-  ]
+, "example"  ]
 }
