--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-polygon-cropper",
   "version": "0.1.0",
   "private": true,
+  "main":"dist/index.js",
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
@@ -27,10 +28,10 @@
     "webpack-cli": "^4.9.2"
   },
   "scripts": {
-    "start": "webpack serve --open --hot --mode development",
-    "serve": "webpack-dev-server --open",
+    "start": "webpack  serve --config webpack.dev.js --open --hot --mode development",
+    "serve": "webpack-dev-server --config webpack.dev.js --open",
     "dist":"webpack",
-    "build": "react-scripts build",
+    "build": "webpack --config webpack.build.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
