--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
       "removeComments": true,
       "preserveConstEnums": true,
       "outFile": "../../built/local/tsc.js",
-      "sourceMap": true
+      "sourceMap": true,
+      "jsx": "preserve",
   },
   "include": [
       "src/**/*"
