--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "webpack-dev-server": "^4.8.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.js --open --hot",
-    "build": "webpack --config webpack.build.js"
+    "start": "webpack-dev-server --config ./config/demo --open --hot",
+    "build": "webpack --config ./config/build"
   }
 }
