--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-cropper",
     "eay-crop",
     "tiny-crop",
+    "circle-croppe",
     "react-tiny-cropper"
   ],
   "author": "Jambo",
