--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-tiny-cropper",
-  "version": "0.0.2",
-  "description": "A React component that supports cropping image with multiple shapes",
+  "version": "0.0.4",
   "main": "./dist/index.js",
+  "description": "A React component that supports cropping image with multiple shapes",
   "scripts": {
     "start": "webpack-dev-server --config ./config/demo --open --hot",
     "build": "webpack --config ./config/build"
@@ -25,6 +25,9 @@
   },
   "homepage": "https://github.com/Jambo2018/react-polygon-cropper#readme",
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/plugin-transform-react-jsx": "^7.17.3",
+    "@babel/preset-env": "^7.16.11",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -32,6 +35,8 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "react": "^16.8.0",
