--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,6 @@
 {
-    "plugins": [
-       ["@babel/plugin-transform-runtime", {           
-         "corejs": 2,
-         "helpers": true,
-         "regenerator": true,
-         "useESModules": false
-       }],
-       "@babel/preset-react"
-    ]
+    "presets": [
+      "es2015", "react"
+    ] 
+
 }
