--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-tiny-cropper",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "./dist/index.js",
   "description": "A React component that supports cropping image with multiple shapes",
   "scripts": {
@@ -39,6 +39,8 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-easy-crop": "^4.1.3",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.8",
@@ -50,6 +52,5 @@
   "peerDependencies": {
     "react": "^16.8.0",
     "react-dom": "^16.8.0"
-  },
-  "dependencies": {}
+  }
 }
