--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-tiny-cropper",
-  "version": "0.1.5",
+  "version": "0.1.7",
   "main": "./dist/index.js",
   "description": "A React component that supports cropping image with multiple shapes",
   "scripts": {
@@ -11,6 +11,9 @@
     "type": "git",
     "url": "git+https://github.com/Jambo2018/react-polygon-cropper.git"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "react-cropper",
     "eay-crop",
