--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   ],
   "keywords": [
     "react-cropper",
-    "eay-crop",
+    "easy-crop",
     "tiny-crop",
-    "circle-croppe",
+    "circle-crop",
     "react-tiny-cropper"
   ],
   "author": "Jambo",
